--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
  "ip": "SkyHixex.aternos.me",
- "port": "",
+ "port": "49216",
  "name": "AntiCheatBotL",
  "auto-night-skip": "true",
  "loginmsg": "ppooiiuu"
